@@ -1,3 +1,12 @@
+2008-10-31  Matthew Allum  <mallum@openedhand.com>
+
+	* clutter/clutter-texture.c: (clutter_texture_set_filter_quality),
+	(clutter_texture_get_filter_quality):
+        Fix up some logic, typos.        
+
+	* clutter/glx/clutter-glx-texture-pixmap.c:
+        Improve support for mipmaped TFP textures.
+
 2008-10-31  Emmanuele Bassi  <ebassi@linux.intel.com>
 
 	Bug 1200 - Crash with invalid DISPLAY
